--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "chai": "^3.5.0",
     "express": "^4.15.2",
+    "jwt-simple": "^0.5.1",
+    "mocha": "^3.3.0",
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.2",
+    "supertest": "^3.0.0",
     "webpack": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0",
+    "supertest": "^3.0.0"
+  },
   "scripts": {
     "postinstall": "npm run webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:dev": "JWT_SECRET=foo DATABASE_URL=postgres://localhost/react_template_db_test nodemon ./node_modules/mocha/bin/mocha --recursive",
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "start:dev": "npm run webpack -- -w & DATABASE_URL=postgres://localhost/react_template_db nodemon --ignore dist/ --ignore src/ server.js"
+    "start:dev": "npm run webpack -- -w & JWT_SECRET=foo DATABASE_URL=postgres://localhost/react_template_db nodemon --ignore dist/ --ignore src/ server.js"
   },
   "keywords": [],
   "author": "",
