--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.2",
     "supertest": "^3.0.0",
     "webpack": "^2.3.0"
