--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": "^3.5.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "github": "^9.2.0",
     "jwt-simple": "^0.5.1",
     "mocha": "^3.3.0",
     "passport": "^0.3.2",
