add facebook support

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NODE_ENV=development
 DATABASE_URL=postgres://localhost/react_template_db
 GOOGLE_OAUTH_CLIENT_ID=997341330141-dtkh85t7qn5ns3r3avsfuu83fiarmmqu.apps.googleusercontent.com
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
+FACEBOOK_OAUTH_CLIENT_ID=668173116702066
