--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-simple": "^0.5.1",
     "mocha": "^3.3.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.5",
