--- a/package.json
+++ b/package.json
@@ -35,11 +35,18 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
     "supertest": "^3.0.0"
   },
   "scripts": {
     "postinstall": "npm run webpack",
+    "test:client:dev": "./node_modules/karma/bin/karma start",
     "test:dev": "JWT_SECRET=foo DATABASE_URL=postgres://localhost/react_template_db_test nodemon ./node_modules/mocha/bin/mocha --recursive",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "start:dev": "npm run webpack -- -w & nodemon -r dotenv/config --ignore dist/ --ignore src/ server.js"
