--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   },
   "scripts": {
     "postinstall": "npm run webpack",
-    "test:client:dev": "./node_modules/karma/bin/karma start",
+    "test:client": "./node_modules/karma/bin/karma start",
     "test:server:dev": "JWT_SECRET=foo DATABASE_URL=postgres://localhost/react_template_db_test nodemon ./node_modules/mocha/bin/mocha --recursive",
     "test:server": "JWT_SECRET=foo DATABASE_URL=postgres://localhost/circle_test ./node_modules/mocha/bin/mocha ./test/server --recursive",
-    "test": "npm run test:server",
+    "test": "npm run test:server & npm run test:client",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "start:dev": "npm run webpack -- -w & nodemon -r dotenv/config --ignore dist/ --ignore src/ server.js"
   },
