--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-story-reporter": "^0.3.1",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
     "supertest": "^3.0.0"
