--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
@@ -43,6 +44,7 @@
     "karma-story-reporter": "^0.3.1",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
+    "react-addons-test-utils": "^15.5.1",
     "supertest": "^3.0.0"
   },
   "scripts": {
