--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GOOGLE_OAUTH_CLIENT_ID=997341330141-dtkh85t7qn5ns3r3avsfuu83fiarmmqu.apps.google
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
 FACEBOOK_OAUTH_CLIENT_ID=668173116702066
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=password
