--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-bearer-token": "^2.1.0",
     "github": "^9.2.0",
     "jwt-simple": "^0.5.1",
     "mocha": "^3.3.0",
