--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
 FACEBOOK_OAUTH_CLIENT_ID=668173116702066
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=password
+GOOGLE_PLACES_KEY=AIzaSyDgSXYLEPSWj9B5k5hH8ATqJtT5_cmhGlw
